MODIFIED: input box style to add colour on hover

--- a/FrontEnd/src/components/address-form/address-form.scss
+++ b/FrontEnd/src/components/address-form/address-form.scss
@@ -70,6 +70,12 @@
     margin-top: 8px;
 
 }
+.input:hover,select:hover
+{
+    border-color: #008CFF;
+
+
+}
 .row
 {
     display: flex;
@@ -215,6 +221,12 @@ button
 {
     align-items: flex-end;
     margin:10px 120px;
+}
+.displayMessage
+{
+    color: red;
+    text-align: center;
+    margin-top: 20px;
 }
 @media only screen and (max-width:1800px) 
 {
